src/tests/snapshots/gitu__tests__editor__exit_from_prompt_exits_menu.snap
---
source: src/tests/editor.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 Branch                                                                         |
 b     Checkout branch/revision                                                 |
 c     Checkout new branch                                                      |
 s     Spinoff branch                                                           |
 K     Delete branch                                                            |
 q/esc Quit/Close                                                               |
styles_hash: 7ec5204ca252dbc6
