src/tests/snapshots/gitu__tests__editor__move_next_then_parent_section.snap
---
source: src/tests/editor.rs
expression: ctx.redact_buffer()
---
▌Unstaged changes (3)                                                           |
▌modified   file-1                                                              |
▌@@ -0,0 +1,20 @@                                                               |
▌+line 1 (file-1)                                                               |
▌+line 2 (file-1)                                                               |
▌+line 3 (file-1)                                                               |
▌+line 4 (file-1)                                                               |
▌+line 5 (file-1)                                                               |
▌+line 6 (file-1)                                                               |
▌+line 7 (file-1)                                                               |
▌+line 8 (file-1)                                                               |
▌+line 9 (file-1)                                                               |
▌+line 10 (file-1)                                                              |
▌+line 11 (file-1)                                                              |
▌+line 12 (file-1)                                                              |
▌+line 13 (file-1)                                                              |
▌+line 14 (file-1)                                                              |
▌+line 15 (file-1)                                                              |
▌+line 16 (file-1)                                                              |
▌+line 17 (file-1)                                                              |
styles_hash: 4aa2c126ebd307c4
