src/tests/snapshots/gitu__tests__editor__re_enter_picker_from_menu.snap
---
source: src/tests/editor.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                       Author Name __ |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 2/2   Checkout › █                                                             |
▌origin/HEAD                                                                    |
 origin/main                                                                    |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 68d8822de3a377e7
