src/tests/snapshots/gitu__tests__editor__re_enter_prompt_from_menu.snap
---
source: src/tests/editor.rs
expression: ctx.redact_buffer()
---
▌No branch                                                                      |
                                                                                |
 Recent commits                                                                 |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
? Checkout: ›                                                                   |
styles_hash: df5571974d9b5e40
